# SciWatch

./: .buildinfo  .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  debugging_queries.html  genindex.html  grammar.html  html.html  index.html  installation.html  main.py  objects.inv  py-modindex.html  pyproject.toml  query.html  sci_watch.core.exceptions.html  sci_watch.core.html  sci_watch.core.settings.html  sci_watch.html  sci_watch.mailer.gmail_sender.html  sci_watch.mailer.html  sci_watch.parser.html  sci_watch.parser.query.html  sci_watch.parser.query_evaluator.html  sci_watch.parser.query_parser.html  sci_watch.parser.tree_node.html  sci_watch.sci_watcher.html  sci_watch.senders.gmail_sender.html  sci_watch.senders.html  sci_watch.senders.local_dir_sender.html  sci_watch.senders.slack_sender.html  (+20 more)
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  query.rst.txt  sci_watch.core.exceptions.rst.txt  sci_watch.core.rst.txt  sci_watch.core.settings.rst.txt  sci_watch.mailer.gmail_sender.rst.txt  sci_watch.mailer.rst.txt  sci_watch.parser.query.rst.txt  sci_watch.parser.query_evaluator.rst.txt  sci_watch.parser.query_parser.rst.txt  sci_watch.parser.rst.txt  sci_watch.parser.tree_node.rst.txt  sci_watch.rst.txt  sci_watch.sci_watcher.rst.txt  sci_watch.senders.gmail_sender.rst.txt  sci_watch.senders.local_dir_sender.rst.txt  sci_watch.senders.rst.txt  sci_watch.senders.slack_sender.rst.txt  sci_watch.senders.teams_sender.rst.txt  senders.rst.txt  (+15 more)
(+74 files in other folders)
